# pollo

./: Cargo.toml  mock_demo.ipynb  test.json  test.vcf  test_out.vcf
src/: main.rs  triangular_matrix.rs
